--- a/public/contact.html
+++ b/public/contact.html
@@ -62,7 +62,7 @@
     <div class="header-container">
       <header class="header-content">
         <div class="header-logo">
-          <p>Shooper.</p>
+          <p onclick="window.location='/'">Shooper.</p>
           <div class="header-logo__logo-right" id="navToggleHeader"><a class="header-logo__logo" id="navToggleHeaderBtn" href="#headerNavContent"><i class="fas fa-bars"></i></a></div>
         </div>
         <div class="header-navToggle" id="headerNavContent">
