--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -22,21 +22,46 @@
       <div class="dashboard-content_header">
         <h1 class="dashboard-content_header-title">Dashboard</h1><a class="dashboard-content_header-link" id="outLoginDashboard" href="#">Salir</a>
       </div>
+      <header class="dashboard-content_head">
+        <div class="dashboard-content_head-navigation">
+          <ul class="dashboard-content_head-navigation_ul">
+            <li class="dashboard-content_head-navigation_ul-li"><a class="dashboard-content_head-navigation_ul-li_a" href="#">Form Elements<i class="dashboard-content_head-navigation_ul-li_a-i fas fa-tachometer-alt"></i></a></li>
+            <li class="dashboard-content_head-navigation_ul-li"><a class="dashboard-content_head-navigation_ul-li_a" href="#">Form Elements<i class="dashboard-content_head-navigation_ul-li_a-i fas fa-folder"></i></a></li>
+            <li class="dashboard-content_head-navigation_ul-li"><a class="dashboard-content_head-navigation_ul-li_a" href="#">Form Elements<i class="dashboard-content_head-navigation_ul-li_a-i fas fa-ambulance"></i></a></li>
+            <li class="dashboard-content_head-navigation_ul-li"><a class="dashboard-content_head-navigation_ul-li_a" href="#">Form Elements<i class="dashboard-content_head-navigation_ul-li_a-i fas fa-anchor"></i></a></li>
+            <li class="dashboard-content_head-navigation_ul-li"><a class="dashboard-content_head-navigation_ul-li_a" href="#">Form Elements<i class="dashboard-content_head-navigation_ul-li_a-i fas fa-coffee"></i></a></li>
+            <li class="dashboard-content_head-navigation_ul-li"><a class="dashboard-content_head-navigation_ul-li_a" href="#">Form Elements<i class="dashboard-content_head-navigation_ul-li_a-i fas fa-balance-scale"></i></a></li>
+            <li class="dashboard-content_head-navigation_ul-li"><a class="dashboard-content_head-navigation_ul-li_a" href="#">Form Elements<i class="dashboard-content_head-navigation_ul-li_a-i fas fa-baby-carriage"></i></a></li>
+            <li class="dashboard-content_head-navigation_ul-li"><a class="dashboard-content_head-navigation_ul-li_a" href="#">Form Elements<i class="dashboard-content_head-navigation_ul-li_a-i fas fa-beer"></i></a></li>
+          </ul>
+        </div>
+      </header>
+      <div class="dashboard-content_container">
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+          tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+          quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+          consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+          cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+          proident, sunt in culpa qui officia deserunt mollit anim id est laborum.Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+          tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+          quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+          consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+          cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+          proident, sunt in culpa qui officia deserunt mollit anim id est laborum.Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+          tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+          quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+          consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+          cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+          proident, sunt in culpa qui officia deserunt mollit anim id est laborum.Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+          tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+          quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+          consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+          cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+          proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+        </p>
+      </div>
     </div>
   </body>
   <script src="./script.js"></script>
-  <!--script.
-  const linkOutLogin = document.getElementById("outLoginDashboard")
-  let user = localStorage.getItem("userSession")
-  if(user){
-  	window.location.href
-  }else{
-  	window.location.href = "login.html"
-  }
-  linkOutLogin.addEventListener("click", function(e){
-  	e.preventDefault()
-  	localStorage.removeItem("userSession")
-  	window.location.href = "login.html"
-  })
-  -->
 </html>
